ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /game
        pathType: Prefix
        backend:
          service:
            name: todo-frontend-2048-game
            port:
              number: 80
      - path: /weather
        pathType: Prefix
        backend:
          service:
            name: weather-service-weather
            port:
              number: 3000
